      sha1s, even when bundles are used.  (Aaron Bentley, #181391)

    * Conversion from non-rich-root to rich-root(-pack) works correctly even
      though search keys are not topologically sorted.  (Aaron Bentley)

    * Conversion from non-rich-root to rich-root(-pack) works even when a
      parent revision has a different root id.  (Aaron Bentley, #177874)

    * Disable strace testing until strace is fixed (see bug #103133).
     (Vincent Ladeuil, #226769)

    * Fetching all revisions from a repository does not cause pack collisions.
      (Robert Collins, Aaron Bentley, #212908)

    * Fix error about "attempt to add line-delta in non-delta knit".
      (Andrew Bennetts, #217701)

    * Pushing a branch in "dirstate" format (Branch5) over bzr+ssh would break
      if the remote server was < version 1.2. This was due to a bug in the
      RemoteRepository.get_parent_map() fallback code.
      (John Arbash Meinel, #214894)

    * Set SO_REUSEADDR on server sockets of ``bzr serve`` to avoid problems
      rebinding the socket when starting the server a second time.
      (John Arbash Meinel, Martin Pool, #164288)

    * Severe performance degradation in fetching from knit repositories to
      knits and packs due to parsing the entire revisions.kndx on every graph
      walk iteration fixed by using the Repository.get_graph API.  There was
      another regression in knit => knit fetching which re-read the index for
      every revision each side had in common.
      (Robert Collins, John Arbash Meinel)

    * When logging the changes to a particular file, there was a bug if there
      were ghosts in the revision ancestry. (John Arbash Meinel, #209948)

  DOCUMENTATION:

    * Document outlining strategies for TortoiseBzr. (Mark Hammond)

  TESTING:

    * Add ``thread_name_suffix`` parameter to SmartTCPServer_for_testing, to
      make it easy to identify which test spawned a thread with an unhandled
      exception. (Andrew Bennetts)
